// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticate should render 1`] = `
<styled.div>
  <Segment
    style={
      Object {
        "backgroundColor": "#FAFAFA",
        "border": "none",
        "boxShadow": "none",
      }
    }
  >
    <Header
      as="h1"
      icon={true}
      textAlign="center"
    >
      <Icon
        as="i"
        circular={true}
        name="user"
      />
      <HeaderContent>
        Sign Up
      </HeaderContent>
    </Header>
    <Form
      as="form"
    >
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Email"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Password"
        type="password"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Confirm Password"
        type="password"
      />
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
      >
        Sign Up
      </Button>
      <Divider
        horizontal={true}
      >
        Or
      </Divider>
      <Link
        href="/signin"
        replace={false}
        to="/signin"
      >
        <Button
          as="button"
          color="violet"
          fluid={true}
        >
          Sign In
        </Button>
      </Link>
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#4285F4",
            "backgroundImage": "url('https://firebasestorage.googleapis.com/v0/b/thesourceoftruth-28554.appspot.com/o/btn_google_light_normal_ios.svg?alt=media&token=d1349925-4489-44dc-9e47-8037a8a6d14f')",
            "backgroundPosition": "0px 0px",
            "backgroundRepeat": "no-repeat",
            "fontFamily": "'Roboto', sans-serif",
            "height": "46px",
            "src": "url('https://fonts.googleapis.com/css?family=Roboto')",
          }
        }
      >
        Sign in with Google
      </Button>
    </Form>
  </Segment>
</styled.div>
`;

exports[`Authenticate should render a loading message when passed loading as a prop 1`] = `
<styled.div>
  <Segment
    style={
      Object {
        "backgroundColor": "#FAFAFA",
        "border": "none",
        "boxShadow": "none",
      }
    }
  >
    <Header
      as="h1"
      icon={true}
      textAlign="center"
    >
      <Icon
        as="i"
        circular={true}
        name="user"
      />
      <HeaderContent>
        Sign Up
      </HeaderContent>
    </Header>
    <Form
      as="form"
    >
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Email"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Password"
        type="password"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Confirm Password"
        type="password"
      />
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
      >
        Sign Up
      </Button>
      <Divider
        horizontal={true}
      >
        Or
      </Divider>
      <Link
        href="/signin"
        replace={false}
        to="/signin"
      >
        <Button
          as="button"
          color="violet"
          fluid={true}
        >
          Sign In
        </Button>
      </Link>
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#4285F4",
            "backgroundImage": "url('https://firebasestorage.googleapis.com/v0/b/thesourceoftruth-28554.appspot.com/o/btn_google_light_normal_ios.svg?alt=media&token=d1349925-4489-44dc-9e47-8037a8a6d14f')",
            "backgroundPosition": "0px 0px",
            "backgroundRepeat": "no-repeat",
            "fontFamily": "'Roboto', sans-serif",
            "height": "46px",
            "src": "url('https://fonts.googleapis.com/css?family=Roboto')",
          }
        }
      >
        Sign in with Google
      </Button>
    </Form>
    <styled.div>
      <Loader
        active={true}
        inline="centered"
      />
    </styled.div>
  </Segment>
</styled.div>
`;

exports[`Authenticate should render an error when passed as a prop 1`] = `
<styled.div>
  <Segment
    style={
      Object {
        "backgroundColor": "#FAFAFA",
        "border": "none",
        "boxShadow": "none",
      }
    }
  >
    <Header
      as="h1"
      icon={true}
      textAlign="center"
    >
      <Icon
        as="i"
        circular={true}
        name="user"
      />
      <HeaderContent>
        Sign Up
      </HeaderContent>
    </Header>
    <Form
      as="form"
    >
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Email"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Password"
        type="password"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Confirm Password"
        type="password"
      />
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
      >
        Sign Up
      </Button>
      <Divider
        horizontal={true}
      >
        Or
      </Divider>
      <Link
        href="/signin"
        replace={false}
        to="/signin"
      >
        <Button
          as="button"
          color="violet"
          fluid={true}
        >
          Sign In
        </Button>
      </Link>
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#4285F4",
            "backgroundImage": "url('https://firebasestorage.googleapis.com/v0/b/thesourceoftruth-28554.appspot.com/o/btn_google_light_normal_ios.svg?alt=media&token=d1349925-4489-44dc-9e47-8037a8a6d14f')",
            "backgroundPosition": "0px 0px",
            "backgroundRepeat": "no-repeat",
            "fontFamily": "'Roboto', sans-serif",
            "height": "46px",
            "src": "url('https://fonts.googleapis.com/css?family=Roboto')",
          }
        }
      >
        Sign in with Google
      </Button>
    </Form>
    <Message
      negative={true}
    >
      <p>
        Could not sign in, please check your email and password and try again
      </p>
    </Message>
  </Segment>
</styled.div>
`;
